@@ -5,7 +5,7 @@ build.xml.stylesheet.CRC32=240b97a2
 # Do not edit this file. You may delete it but then the IDE will never regenerate such files for you.
 nbproject/build-impl.xml.data.CRC32=293d74ef
 nbproject/build-impl.xml.script.CRC32=8d6e6577
-nbproject/build-impl.xml.stylesheet.CRC32=28da5de6
+nbproject/build-impl.xml.stylesheet.CRC32=a6c60f5c
 nbproject/profiler-build-impl.xml.data.CRC32=f6f426c1
 nbproject/profiler-build-impl.xml.script.CRC32=abda56ed
 nbproject/profiler-build-impl.xml.stylesheet.CRC32=a5b6598e
