@@ -20,7 +20,7 @@ dist.jar=${dist.dir}/jOMiSCID.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dnssd-src.dir=${file.reference.jOMiSCID-dnssd-src}
 excludes=
-file.reference.castor-1.0.5-xml.jar=../../temp-workspace/jOMiSCID/lib/castor-1.0.5-xml.jar
+file.reference.castor-1.0.5-xml.jar=lib/castor-1.0.5-xml.jar
 file.reference.libdbus-java-1.10.jar=../lib/libdbus-java-1.10.jar
 generated-src.dir=${file.reference.jOMiSCID-generated-src}
 includes=**
@@ -61,6 +61,7 @@ jnlp.codebase.type=local
 jnlp.codebase.url=file:/home/prometheus/emonet/projects/jOMiSCID/dist/
 jnlp.enabled=false
 jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=fr.prima.omiscid.test.AudioServer
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
